# virt

./: .gitignore  Cargo.toml  config.toml
virt-core/: Cargo.toml
virt-core/src/: action.rs  buffer.rs  color.rs  core.rs  decoder.rs  error.rs  geometry.rs  lib.rs  pipelines.rs  render.rs  shape.rs  tools.rs  util.rs  vector.rs  widget.rs
widgets/: all_widgets.toml
widgets/other/: all_widgets2.toml
widgets/other/other2/: base_widget.toml
