[package]
name = "virt-core"
version = "0.1.0"
authors = ["Tskken <dylan.blanchard@mymail.champlain.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.18"
vulkano-shaders = "0.18"
vulkano-win = "0.18"
winit = "0.22"