[package]
name = "virt-core"
version = "0.1.0"
authors = ["Tskken <dillblanchard@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.19"
vulkano-shaders = "0.19"
winit = "0.22"
vulkano-win = "0.19"
toml = "0.5"
serde = "1.0"
serde_derive = "1.0"
hex = "0.4"
png = "0.16"